Fix css footer and change style scrollbar

--- a/application/static/css/main.css
+++ b/application/static/css/main.css
@@ -9,37 +9,93 @@ body {
     margin: 20px 0;
 }
 
-#footer > .container {
-    padding-left: 15px;
-    padding-right: 15px;
-}
+/*#footer > .container {*/
+/*padding-left: 15px;*/
+/*padding-right: 15px;*/
+/*}*/
 
+/*#footer {*/
+/*height: 60px;*/
+/*background-color: #f5f5f5;*/
+/*}*/
 #footer {
-    height: 60px;
+    height: 273px;
+    border-top: solid 1px #e6e6e6;
     background-color: #f5f5f5;
+    margin-top: 60px;
+}
+.row.row-gap-huge {
+margin-top: 60px;
+}
+.sprite {
+position: relative;
+display: inline-block;
+}
+.sprite-social {
+margin-right: 10px;
+}
+.sprite-facebook {
+background-image: url(//lh3.ggpht.com/BS7NWXsumL1wr--LiJQx1hYwSptIJPAPwxQcy2aHwT8kx4VI_cUHSL-4rFl8DT8sbh8oVJzGq8Wtoki4puo=s0#w=156&h=136);
+background-position: -105px -33px;
+width: 31px;
+height: 31px;
+}
+.sprite-twitter {
+background-image: url(//lh3.ggpht.com/BS7NWXsumL1wr--LiJQx1hYwSptIJPAPwxQcy2aHwT8kx4VI_cUHSL-4rFl8DT8sbh8oVJzGq8Wtoki4puo=s0#w=156&h=136);
+background-position: -105px -66px;
+width: 31px;
+height: 31px;
+}
+.sprite-gplus {
+background-image: url(//lh3.ggpht.com/BS7NWXsumL1wr--LiJQx1hYwSptIJPAPwxQcy2aHwT8kx4VI_cUHSL-4rFl8DT8sbh8oVJzGq8Wtoki4puo=s0#w=156&h=136);
+background-position: -70px -70px;
+width: 31px;
+height: 31px;
+}
+.sprite-linkedin {
+background-image: url(//lh3.ggpht.com/BS7NWXsumL1wr--LiJQx1hYwSptIJPAPwxQcy2aHwT8kx4VI_cUHSL-4rFl8DT8sbh8oVJzGq8Wtoki4puo=s0#w=156&h=136);
+background-position: -33px -105px;
+width: 31px;
+height: 31px;
+}
+h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
+font-family: "Whitney SSm A","Whitney SSm B","Helvetica Neue",Helvetica,Arial,sans-serif;
+font-weight: 700;
+line-height: 1.1;
+color: inherit;
+}
+h4, h5, h6 {
+margin-top: 11.5px;
+margin-bottom: 11.5px;
+}
+h4, .h4 {
+font-size: 12px;
+}
+h4, .h4 {
+color: #767676;
+line-height: 1.6;
+text-transform: uppercase;
+font-weight: 400;
 }
 
-::-webkit-scrollbar {
-width:8px;
-height:8px;
+
+::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	background-color: #F5F5F5;
 }
 
-::-webkit-scrollbar-track {
-background:#FFF;
--webkit-box-shadow:inset 1px 1px 2px #E0E0E0;
-border:1px solid #D8D8D8;
+::-webkit-scrollbar
+{
+	width: 10px;
+	background-color: #F5F5F5;
 }
 
-::-webkit-scrollbar-thumb {
-background:#cd2122;
--webkit-box-shadow:inset 1px 1px 2px rgba(155,155,155,0.4);
-}
+::-webkit-scrollbar-thumb
+{
+	background-color: #0ae;
 
-::-webkit-scrollbar-thumb:hover {
--webkit-box-shadow:inset 1px 1px 10px rgba(0,0,0,0.3);
-}
-
-::-webkit-scrollbar-thumb:active {
-background:#888;
--webkit-box-shadow:inset 1px 1px 2px rgba(0,0,0,0.3);
+	background-image: -webkit-gradient(linear, 0 0, 0 100%,
+	                   color-stop(.5, rgba(255, 255, 255, .2)),
+					   color-stop(.5, transparent), to(transparent));
 }
